--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -107,7 +107,7 @@ a:hover {
     position: relative; /* Tornar a posição relativa para que possamos posicionar elementos absolutamente dentro dela */
     background-color: #CF96DF;
     width: 100%;
-    height: 663px;
+    height: 729px;
     display: flex;
     justify-content: space-around;
     padding: 20px; /* Adicionando um espaço interno para as margens */
@@ -266,6 +266,7 @@ p {
 
     font-size: 20pt;
     font-weight: 600;
+    padding-top: 20px;
 
 }
 
