--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -90,36 +90,46 @@ button:hover {
     transform: scale(1.1);
 }
 
+.hello {
+    font-size: 30px;
+}
 
 .kpi-pontuacao-media {
-    grid-area: 1 / 2 / 3 / 4;
+    grid-area: 1 / 2 / 3 / 6;
     background-color: var(--cinza-basico);
-    color: #000;
-    font-family: "Montserrat", sans-serif;
-    font-weight: bold;
     text-align: center;
     border-radius: 30px;
     margin-top: 20px;
     margin-left: 100px;
+    padding: 20px;
 }
 
 
 
-.kpi-porcentagem-atual {
-    grid-area: 1 / 4 / 3 / 6;
-    background-color: var(--cinza-basico);
-    color: #000;
+.tituloMedia {
+    color: #CF96DF;
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
+    font-size: 25px;
     text-align: center;
-    border-radius: 30px;
-    margin-top: 20px;
-    margin-left: 100px;
+}
+
+
+.mediaPontos {
+    padding: 20px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+    font-size: 40px;
+    text-align: center;
+    color: #000;
 }
 
 .graficos {
-    grid-area: 4 / 3 / 6 / 6;
-    margin-bottom: 50px;
-    margin-right: 100px;
-    background-color: #000;
+    grid-area: 4 / 2 / 6 / 6;
+    margin-bottom: 30px;
+    margin-left: 150px;
+    position: relative;
+    border: solid var(--cinza-basico);
+    
 }
+
