--- a/public/css/login.css
+++ b/public/css/login.css
@@ -218,3 +218,9 @@ p {
 
 }
 
+.mensagemErro {
+     display: none; 
+    font-family: "Montserrat", sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+}
