--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -150,7 +150,7 @@ body {
     
   }
   
-  .questions-container {
+  .questao-container {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -159,25 +159,25 @@ body {
     font-family: "Montserrat", sans-serif;
   }
   
-  .question {
+  .questao {
     font-size: 24px;
     font-weight: bold;
     text-align: center;
     font-family: "Montserrat", sans-serif;
   }
   
-  .answers-container {
+  .respostas-container {
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 16px;
   }
   
-  .answer:disabled {
+  .respostas:disabled {
     cursor: not-allowed;
   }
   
-  .next-question {
+  .proxima-questao {
     margin-top: 32px;
   }
   
@@ -199,18 +199,18 @@ body {
     filter: brightness(0.8);
   }
 
-  .next-question   {
+  .proxima-questao  {
     background-color: #000;
 
   }
   
-  /* Finish game */
-  .final-message {
+  /* Final do quiz */
+  .mensagem-final {
     font-size: 25px;
     text-align: center;
   }
   
-  .final-message span {
+  .mensagem-final span {
     display: block;
     margin-top: 8px;
   }
