--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -127,7 +127,9 @@ body {
     font-weight: bold;
   }
 
-
+  .hello {
+    font-size: 30px;
+}
   
   .container-quiz {
     background-color: #fff;
